Position of sub nav is fixed instead of absolute

--- a/category-people.html
+++ b/category-people.html
@@ -37,11 +37,15 @@
       <a href="index.html" class="logo">Art Gallery</a>
       <nav class="nav-bar">
         <ul class="nav-link">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
           <li><a href="about.html" class="link-btn">About Us</a></li>
-          <li><a href="contact.html" class="link-btn">Contact Us</a></li> 
-          <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
+          <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+          <li>
+            <a href="login.html">
+              <button type="button" class="login-btn">Admin Login</button>
+              </a>
+          </li>
         </ul>
         <div class="burger toggle">
           <div class="line1"></div>
@@ -49,7 +53,7 @@
           <div class="line3"></div>
         </div>
       </nav>
-     </header>
+    </header>
 
     <main>
       <!-- Section - Introduction -->
@@ -246,8 +250,8 @@
         </div>
       </div>
     </footer>
-    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
     <script type="module" src="./js/submenu.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
     <script src="./js/category-people.js"></script>
   </body>
 </html>
