--- a/category-wator-color.html
+++ b/category-wator-color.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+  <link rel="stylesheet" href="./css/index.css" />
   <link rel="stylesheet" href="./css/category-wator-color.css">
   <link rel="stylesheet" href="./css/submenu.css">
   <link rel="stylesheet" href="./css/general.css">
@@ -24,17 +25,20 @@
     <nav class="nav-bar">
       <ul class="nav-link">
         <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Photo Gallery</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-       <li>   
-       <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
-       </ul>
-         <div class="burger toggle">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
+        <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
+        <li><a href="about.html" class="link-btn">About Us</a></li>
+        <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+        <li>
+          <a href="login.html">
+            <button type="button" class="login-btn">Admin Login</button>
+            </a>
+        </li>
+      </ul>
+      <div class="burger toggle">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </nav>
   </header>
   <section class="container hero">
@@ -103,7 +107,7 @@
       <div class="social-icons">
         <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
         </a>
-        <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
+        <a href="https://www.youtube.com/"><i class=" fab fa-youtube"></i> </a>
         <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
         <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
         <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
