--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+ <link rel="stylesheet" href="css/index.css" />
  <link rel="stylesheet" href="css/submenu.css">
  <link rel="stylesheet" href="css/general.css">
  <link rel="stylesheet" href="css/about.css">
@@ -18,27 +19,31 @@
 </head>
 
 <body>
- <header>
-  <a href="index.html" class="logo">Art Gallery</a>
-  <nav class="nav-bar">
-   <ul class="nav-link">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
-    <li><a href="about.html" class="link-btn">About Us</a></li>
-    <li><a href="contact.html" class="link-btn">Contact Us</a></li>  
-    <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
-   </ul>
-      <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
- </header>
+  <header>
+    <a href="index.html" class="logo">Art Gallery</a>
+    <nav class="nav-bar">
+      <ul class="nav-link">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
+        <li><a href="about.html" class="link-btn">About Us</a></li>
+        <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+        <li>
+          <a href="login.html">
+            <button type="button" class="login-btn">Admin Login</button>
+          </a>
+        </li>
+      </ul>
+      <div class="burger toggle">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  </header>
  <!-- End of Common Header-->
 
  <!-- Kelly's code below-->
- <section class="hero">
+ <section>
   <h1>
    About us
   </h1>
@@ -88,39 +93,41 @@
   </div>
   <!-- Kelly's code ended-->
 
-  <aside class="submenu">
-  </aside>
- </section>
- <!-- Common Footer-->
- <footer>
-  <div class="container">
-   <a href="index.html" class="logo">Art Gallery</a>
-   <div class="footer-content">
-    <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
-   </div>
-   <div class="footer-end">
-    <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
-   </div>
-   <div class="social-icons">
-    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
-    <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
-    <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
-    <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
-   </div>
-  </div>
- </footer>
- <script>
-  //sticky header for home page
-  window.addEventListener("scroll", function () {
-   var header = document.querySelector("header");
-   header.classList.toggle("sticky", window.scrollY > 0);
-  });
- </script>
- <script type="module" src="./js/submenu.js"></script>
- <script type="text/javascript" src="./js/index.js"></script>
+  <!-- sub menu -->
+  <aside class="submenu"></aside>
+
+  <footer>
+    <div class="container">
+      <a href="index.html" class="logo">Art Gallery</a>
+      <div class="footer-content">
+        <p>
+          Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod
+        </p>
+      </div>
+      <div class="footer-end">
+        <p>&COPY; 2020 Company. Privacy Policy | Terms & Conditions</p>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.youtube.com/">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://twitter.com/?lang=en">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com/?hl=en">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com/">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
+  <script type="module" src="./js/submenu.js"></script>
+  <script type="text/javascript" src="./js/index.js"></script>
  <!-- End of Common Footer-->
 </body>
-
 </html>
