--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,9 @@
           <li><a href="about.html" class="link-btn">About Us</a></li>
           <li><a href="contact.html" class="link-btn">Contact Us</a></li>
           <li>
-            <a href="login.html"
-              ><button type="button" class="login-btn">Admin Login</button></a
-            >
+            <a href="login.html">
+              <button type="button" class="login-btn">Admin Login</button>
+              </a>
           </li>
         </ul>
         <div class="burger toggle">
