About dropdown menu fixed

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
  <!-- End of Common Header-->
 
  <!-- Kelly's code below-->
- <section>
+ <section class="banner hero">
   <h1>
    About us
   </h1>
