fix the submenu bug on ppl page and other mobile version

--- a/category-people.html
+++ b/category-people.html
@@ -40,8 +40,12 @@
           <li><a href="#">Home</a></li>
           <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
           <li><a href="about.html" class="link-btn">About Us</a></li>
-          <li><a href="contact.html" class="link-btn">Contact Us</a></li> 
-          <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
+          <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+          <li>
+            <a href="login.html"
+              ><button type="button" class="login-btn">Admin Login</button></a
+            >
+          </li>
         </ul>
         <div class="burger toggle">
           <div class="line1"></div>
@@ -49,11 +53,11 @@
           <div class="line3"></div>
         </div>
       </nav>
-     </header>
+    </header>
 
     <main>
       <!-- Section - Introduction -->
-      <section class="gallery-Introduction">
+      <section class="gallery-Introduction hero">
         <div>
           <h1>People Photos</h1>
           <p>
@@ -67,9 +71,13 @@
       <!-- Section - Filters -->
       <section class="gallery-Filters">
         <div id="categoryBtnContainer">
-          <button class="btn active" onclick="filterCategory('all')">People</button>
+          <button class="btn active" onclick="filterCategory('all')">
+            People
+          </button>
           <button class="btn" onclick="filterCategory('family')">Family</button>
-          <button class="btn" onclick="filterCategory('friends')">Friends</button>
+          <button class="btn" onclick="filterCategory('friends')">
+            Friends
+          </button>
           <button class="btn" onclick="filterCategory('couple')">Couple</button>
           <button class="btn" onclick="filterCategory('love')">Love</button>
         </div>
@@ -79,91 +87,91 @@
       <section class="gallery-collection">
         <div class="gallery-wrapper">
           <div class="image-row">
-            <div class="image-column family">  
-              <div class="image-container">                
-                <img                  
+            <div class="image-column family">
+              <div class="image-container">
+                <img
                   src="/images/people-category-1.jpg"
                   alt="Photo by Daria Shevtsova from Pexels"
-                  class="imageThumbnail"                  
-                />                                
+                  class="imageThumbnail"
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-2.jpg"
                   alt="Photo by Robert Stokoe from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-3.jpg"
                   alt="Photo by Nicholas Githiri from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-1.jpg"
                   alt="Photo by Daria Shevtsova from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
             </div>
 
             <div class="image-column friends">
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-3.jpg"
                   alt="Photo by Nicholas Githiri from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-5.jpg"
                   alt="Photo by Yulianto Poitier from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">               
+              <div class="image-container">
                 <img
                   src="/images/people-category-4.jpg"
                   alt="Photo by Migs Reyes from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-8.jpg"
                   alt="Photo by Jaime Reimer from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
             </div>
 
             <div class="image-column love">
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-4.jpg"
                   alt="Photo by Migs Reyes from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-6.jpg"
                   alt="Photo by lehandross from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-10.jpg"
                   alt="Photo by Taryn Elliott from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-12.jpg"
                   alt="Photo by Flo Maderebner from Pexels"
@@ -173,28 +181,28 @@
             </div>
 
             <div class="image-column couple">
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-8.jpg"
                   alt="Photo by Jaime Reimer from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-7.jpg"
                   alt="Photo by lehandross from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-11.jpg"
                   alt="Photo by Andreas Wohlfahrt from Pexels"
                   class="imageThumbnail"
-                />                
+                />
               </div>
-              <div class="image-container">                
+              <div class="image-container">
                 <img
                   src="/images/people-category-9.jpg"
                   alt="Photo by cottonbro from Pexels"
@@ -205,7 +213,7 @@
             <!-- Modal begins -->
             <div class="modal">
               <span class="modalClose">&times;</span>
-              <img class="modalImage"/>
+              <img class="modalImage" />
               <div class="modalCaption"></div>
             </div>
           </div>
@@ -246,7 +254,7 @@
         </div>
       </div>
     </footer>
-    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
+    <script type="text/javascript" src="./js/index.js"></script>
     <script type="module" src="./js/submenu.js"></script>
     <script src="./js/category-people.js"></script>
   </body>
